# cpp-binary-as-header-playground

./: CMakeLists.txt  README.md  local-build.cmd  setup.cmd
src/: image.h  main.cpp
